# arch-pkg-analyzer

./: Cargo.toml  README.md  justfile  rustfmt.toml
src/: file_parser.rs  main.rs
